--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body,html,#root{
 
 
 body{
-    background-color: #fff8ee;
+    background-color: #fce7d3;
     font-family: "Grandstander Variable";
     font-display: swap;
     
